--- a/TemplateParser/TemplateParser.csproj
+++ b/TemplateParser/TemplateParser.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IMyParser.cs" />
     <Compile Include="ITemplateEngine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TemplateEngineImpl.cs" />
