Adding a TagSplitterTemplateEngine that can be called recursively with different tag parser sets
Taking most of the code out of TemplateEngineImpl

--- a/TemplateParser/TemplateParser.csproj
+++ b/TemplateParser/TemplateParser.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <Compile Include="IMyParser.cs" />
     <Compile Include="ITemplateEngine.cs" />
+    <Compile Include="TagSplitterTemplateEngine.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TemplateEngineImpl.cs" />
   </ItemGroup>
