Composite Tag Parser with the dot in the middle is working fine.  This MUST be put after the "with" tag
TagSplitterTemplateEngine.Apply adding the found boolean flag to stop handling the other parsers.

Adding CompositeTagParser in the TemplateEngineImpl of the TagParser

--- a/TemplateParser/TemplateParser.csproj
+++ b/TemplateParser/TemplateParser.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="AbstractTruncateFromCloseTagParser.cs" />
     <Compile Include="BasicTagParser.cs" />
+    <Compile Include="CompositeTagParser.cs" />
     <Compile Include="IMyParser.cs" />
     <Compile Include="ITemplateEngine.cs" />
     <Compile Include="TagSplitterTemplateEngine.cs" />
