Stuck.  How do I parse the with tag and the subsequent child within it.

--- a/TemplateParser/TemplateParser.csproj
+++ b/TemplateParser/TemplateParser.csproj
@@ -51,6 +51,7 @@
     <Compile Include="AbstractTruncateFromCloseTagParser.cs" />
     <Compile Include="BasicTagParser.cs" />
     <Compile Include="CompositeTagParser.cs" />
+    <Compile Include="EndWithTagParser.cs" />
     <Compile Include="IMyParser.cs" />
     <Compile Include="ITemplateEngine.cs" />
     <Compile Include="TagSplitterTemplateEngine.cs" />
